@@ -402,18 +402,41 @@ duplicate_x509_test(void)
         "test.example.org.pem",             /* dnsName */
         "star.example.org.pem"              /* Wildcard dNSName */
     };
+    char *                              test_cert_dir = getenv("TEST_CERT_DIR");
 
     for (i = 0; i < SIZEOF_ARRAY(test_certs); i++)
     {
+        char * test_cert;
+        
+        if (test_cert_dir)
+        {
+            test_cert = globus_common_create_string("%s/%s",
+                test_cert_dir, test_certs[i]);
+        }
+        else
+        {
+            test_cert = test_certs[i];
+        }
+        
         result = globus_gsi_cred_handle_init(&cred_handle, NULL);
         if (result != GLOBUS_SUCCESS)
         {
             globus_gsi_gssapi_test_print_result(stderr, result);
 
+            if (test_cert_dir)
+	    {
+	        free(test_cert);
+            }
+
             return 2;
         }
 
-        result = globus_gsi_cred_read_cert(cred_handle, test_certs[i]);
+        result = globus_gsi_cred_read_cert(cred_handle, test_cert);
+        if (test_cert_dir)
+        {
+            free(test_cert);
+            test_cert = NULL;
+        }
         if (result != GLOBUS_SUCCESS)
         {
             globus_gsi_gssapi_test_print_result(stderr, result);
@@ -496,6 +519,10 @@ duplicate_x509_test(void)
             globus_gsi_gssapi_test_print_result(stderr, result);
 
             return 2;
+        }
+        if (test_cert_dir)
+        {
+            free(test_cert);
         }
     }
 
