@@ -1,3 +1,15 @@
+globus-gssapi-gsi (11.6-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 06:42:36 -0500
+
+globus-gssapi-gsi (11.5-2+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 06:41:47 -0500
+
 globus-gssapi-gsi (11.5-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
